INT-8125: fix/delete two bits of broken CSS

--- a/less/bootswatch/snap-core.less
+++ b/less/bootswatch/snap-core.less
@@ -745,10 +745,6 @@ input[type="text"]+input[type="submit"] {
     a:visited {
         color: #fff;
     }
-    a(not:.btn):hover {
-    	color:#fff;
-    	text-decoration:underline;
-    }
     h2 {
         color: rgba(255,255,255,0.7);
         text-transform: uppercase;
@@ -2729,7 +2725,7 @@ ul.events-new + ul.events-underway {
   margin:0;
   padding:0;
   border:0;
-  background-color:tranparent;
+  background-color:transparent;
 }
 #page-mod-quiz-edit div.quizpage .pagecontent,
 #page-mod-quiz-edit div.question div.questioncontainer{
